added set Up intructions , added (3) dependencies